elucid/elucid-language/src/semantic/snapshots/elucid_language__semantic__command__tests__filter_command.snap
---
source: elucid-language/src/semantic/command.rs
expression: result
---
Filter(
    Binary(
        NotEqual,
        Field(
            FieldRef {
                name: "status",
            },
        ),
        Literal(
            Number(
                404.0,
            ),
        ),
    ),
)
