elucid/elucid-language/src/semantic/snapshots/elucid_language__semantic__command__tests__summarize_command.snap
---
source: elucid-language/src/semantic/command.rs
expression: result
---
Aggregate {
    measures: [
        AggregateExpr {
            function: "sum",
            argument: Some(
                Field(
                    FieldRef {
                        name: "bytes",
                    },
                ),
            ),
            alias: Some(
                "total_bytes",
            ),
        },
        AggregateExpr {
            function: "count",
            argument: None,
            alias: None,
        },
    ],
    group_by: [
        FieldRef {
            name: "method",
        },
    ],
}
